many files added

--- a/restfull_api_flask/pets_api/Dockerfile
+++ b/restfull_api_flask/pets_api/Dockerfile
@@ -21,7 +21,7 @@ RUN mkdir /opt/pets-api
 # Set 'pets-api' as working directory
 WORKDIR /opt/pets-api
 
-# coe all file
+# copy all file
 ADD . .
 
 # PIP install
@@ -32,4 +32,4 @@ RUN pip install -r requirements.txt
 EXPOSE 5000
 
 # start
-CMD python manage.py runserver
+CMD ls
