--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+## use python 3.10
+
 argon2-cffi==20.1.0
 async-generator==1.10
 attrs==20.3.0
@@ -43,9 +45,9 @@ nbconvert==6.0.7
 nbformat==5.1.2
 nest-asyncio==1.5.1
 notebook==6.2.0
-numpy==1.20.1
+numpy==1.22.1
 packaging==20.9
-pandas==1.2.2
+pandas==1.4.0
 pandocfilters==1.4.3
 parso==0.8.1
 pexpect==4.8.0
